Fixed some alignment and margin issues

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,14 +18,6 @@ body {
     margin-left: 10px;
 }
 
-/* Navlink text */
-/* .nav-item {
-    background-color: none;
-    color: white;
-    font-size: 15px;
-    font-weight: bolder;
-  } */
-
 /* JH Signature Image */
 .Container-Signature {
     display: block;
@@ -56,9 +48,9 @@ h4, h3, h6 {
 #they-say-section, #videos-section {
     text-justify: center;
 }
+
 .card {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 20px 20px;
 }
 
 .card-body {
@@ -71,14 +63,16 @@ h4, h3, h6 {
 }
 
 /* artist photos */
+
+.container {
+    text-align: center;
+}
 .card-img-top {
     vertical-align: middle;
-    order-style: none;
-    margin: 10px;
+    margin: 20px auto;
     border-radius: 25px;
 }
 
-}
 .card-columns {
     margin-top: 40px;
 }
@@ -86,11 +80,11 @@ h4, h3, h6 {
 .bg-primary {
     background-color:grey!important;
 }
-
+/* 
 h3 {
     text-align: center;
     margin-top: 20px auto;
-}
+} */
 
 #video-text {
     text-align: center;
